fix(tree,icon): aligned icons color with design (#DS-2875) (#411)

--- a/packages/components/tree/tree-option.scss
+++ b/packages/components/tree/tree-option.scss
@@ -46,6 +46,12 @@
         outline: none;
     }
 
+    &.kbq-disabled {
+        .kbq-icon {
+            cursor: default;
+        }
+    }
+
     &:not(.kbq-disabled) {
         cursor: pointer;
     }
